# RailVision-backend

./: .gitignore  VECTOR_DB_IMPLEMENTATION.md  VECTOR_UPLOAD_INTEGRATION.md  agent.txt  database  doc.txt  graphdb.txt  injection.txt  llm.txt  rag.txt  router.txt  task  vectordb.txt
backend/: .gitignore  README.md  pyproject.toml  requirements.txt  test_val.docx
backend/scripts/: seed_all.py  seed_demo.py
backend/src/: main.py
backend/src/api/: dependencies.py
backend/src/api/v1/: dependencies.py  middleware.py  router.py
backend/src/application/agents/: agent_config_service.py  base.py  crewai_agent.py  executer_agent.py  pydantic_agent.py
backend/src/application/auth/: auth_service.py
backend/src/application/conversations/: service.py
backend/src/application/documents/: service.py
backend/src/application/graph/: service.py
backend/src/application/organizations/: org_service.py
backend/src/application/projects/: service.py
backend/src/application/reasoning/: pipeline.py  state_builder.py
backend/src/config/: database.py  graph.py  logging.py  settings.py
backend/src/domain/agents/: agent_types.py
backend/src/domain/auth/: hasher.py  tokens.py
backend/src/infrastructure/agents/: crewai_agent.py  pydantic_agent.py
backend/src/scripts/: test_pinecone.py  test_upload_integration.py  verify_reasoning.py  verify_vector.py
backend/src/shared/: security.py
backend/src/utils/: hashing.py
backend/storage/test/: 0742aacb-4e34-450a-afd3-a170995ca831.docx  656901d3-970a-4e3b-8c40-41a367319bc4.docx  e56dffe0-6c82-48d6-872c-eb64f0c87b58.docx
(+80 files in other folders)
